feat: switch to codegen
